[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyurl-sdk"
version = "0.1.1"
description = "Simplifying TinyURL link creation and management with a lightweight Python SDK."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Bilal Baraz", email = "bilalbaraz@windowslive.com" }
]
keywords = ["tinyurl", "sdk", "url", "shortener"]
dependencies = [
  "httpx>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/bilalbaraz/tinyurl-sdk"
Repository = "https://github.com/bilalbaraz/tinyurl-sdk"
